--- a/OpenGL.vcxproj.filters
+++ b/OpenGL.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Res\shaders\Basic.shader" />
+  </ItemGroup>
 </Project>
