--- a/OpenGL.vcxproj.filters
+++ b/OpenGL.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\tests\TestClearColor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\tests\Tests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Res\shaders\Basic.shader" />
